# hr-mentor

./: .dockerignore  .gitignore  README.md  docker-compose.yml  makefile
backend/: README.md
backend/_common/: .env.example  .gitignore  __init__.py  env_paths.py
backend/_common/db/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
backend/_common/db/alembic/: env.py
backend/_common/db/alembic/versions/: 0001_initial_schema.py
backend/_common/db/models/: cv.py  vacancy.py
backend/_common/db_models_and_migrations/: .gitignore  README.md  alembic.ini
backend/_common/db_models_and_migrations/alembic/: env.py
backend/_common/db_models_and_migrations/models/: cv.py  vacancy.py
backend/_common/schemas/: cv.py  ranking.py  vacancy.py  vacancy_index.py
backend/ai-matching-microservice/: .env.example  README.md  pyproject.toml
backend/ai-matching-microservice/app/: config.py  main.py
backend/ai-matching-microservice/app/api/: ai_routes.py  routes.py
backend/ai-matching-microservice/app/models/: __init__.py  cv.py  vacancy.py
backend/ai-matching-microservice/app/prompts/: cv_vacancy_ranking.py  index_to_vector_db.py
backend/ai-matching-microservice/app/schemas/: cv_vacancy_ranking.py  job_extraction.py  matching.py  postgres_vacancy.py
backend/ai-matching-microservice/app/services/: cv_vacancy_ranking_service.py  job_extraction_service.py  pinecone_user_vacancies_service.py  postgres_vacancy_service.py  vacancy_rank_input.py  vector_index_service.py
backend/cv-microservice/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/cv-microservice/app/: __init__.py  config.py  main.py
backend/cv-microservice/app/api/: routes.py
backend/cv-microservice/app/db/: session.py  test_connection.py
backend/cv-microservice/app/models/: __init__.py  cv.py
backend/cv-microservice/app/schemas/: __init__.py
backend/cv-microservice/app/services/: cv_service.py
backend/gateway/: .env.example  Dockerfile  README.md  pyproject.toml
backend/gateway/app/: __init__.py  config.py  main.py
backend/gateway/app/api/: routes.py
backend/gateway/app/services/: proxy_service.py  rabbitmq_publisher.py
backend/rag-index-microservice/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/rag-index-microservice/app/: __init__.py  config.py  main.py  utils.py
backend/rag-index-microservice/app/api/: routes.py
backend/rag-index-microservice/app/prompts/: index_to_vector_db.py
backend/rag-index-microservice/app/schemas/: cv_extraction.py  vacancy_index.py
backend/rag-index-microservice/app/services/: cv_data_extraction_service.py  cv_vector_index_service.py  rabbitmq_subscriber.py  vacancy_data_extraction_service.py  vacancy_vector_index_service.py  vector_index_service.py
backend/ranking-microservice/: .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
backend/ranking-microservice/app/: config.py  main.py  utils.py
backend/ranking-microservice/app/api/: routes.py
backend/ranking-microservice/app/db/: base.py
backend/ranking-microservice/app/models/: __init__.py  vacancy.py
backend/ranking-microservice/app/prompts/: cv_prompt.py  ranking_prompt.py
backend/ranking-microservice/app/schemas/: __init__.py  postgres_vacancy.py
backend/ranking-microservice/app/services/: vacancies_ranking_service.py  vector_store_service.py
backend/vacancy-microservice/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  vacancy_runner.py
backend/vacancy-microservice/app/: Dockerfile  __init__.py  config.py  main.py
backend/vacancy-microservice/app/api/: routes.py
backend/vacancy-microservice/app/db/: session.py
backend/vacancy-microservice/app/models/: __init__.py  vacancy.py
backend/vacancy-microservice/app/services/: vacancy_service.py
frontend/main-app/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
(+53 files in other folders)
