[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-matching-microservice"
version = "0.1.0"
description = "FastAPI matching service: LangChain, OpenAI embeddings, Llama (Ollama), Pinecone"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "sqlalchemy==2.0.36",
  "greenlet>=3",
  "asyncpg>=0.29",
  "pydantic>=2",
  "pydantic-settings==2.6.1",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "pinecone[grpc]>=5.0,<6",
]

[project.scripts]
ai-matching-microservice = "app.main:main"

[tool.setuptools]
include-package-data = false
packages = ["app"]
