[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-microservice"
version = "0.1.0"
description = "FastAPI microservice for CV storage"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "sqlalchemy==2.0.36",
  "greenlet>=3",
  "asyncpg>=0.29",
  "pydantic>=2",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
]

[project.scripts]
cv-microservice = "cv_runner:main"

[tool.setuptools]
include-package-data = false
packages = ["app"]
py-modules = ["cv_runner"]
