[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateway-microservice"
version = "0.1.0"
description = "FastAPI API gateway for all AI HR microservices"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "httpx>=0.28",
  "pydantic-settings==2.6.1",
]

[project.scripts]
gateway = "app.main:main"

[tool.setuptools]
include-package-data = false
packages = ["app"]
