[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-index-microservice"
version = "0.1.0"
description = "FastAPI RAG index: LangChain OpenAI job extraction, embeddings, Pinecone upsert"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "beautifulsoup4>=4.12",
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic>=2",
  "pydantic-settings==2.6.1",
  "aio-pika>=9.4.0",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "pinecone[grpc]>=5.0,<6",
]

[project.scripts]
rag-index-microservice = "app.main:main"

[tool.setuptools]
include-package-data = false
packages = ["app"]
