[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-models-and-migrations"
version = "0.1.0"
description = "Shared SQLAlchemy models and Alembic migrations for AI HR backend"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "sqlalchemy==2.0.36",
  "alembic>=1.14",
  "pydantic-settings==2.6.1",
  "psycopg2-binary"
]

[tool.setuptools]
include-package-data = false
packages = ["alembic"]
